# Plus-Plus

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
builder/: CMakeCache.txt  CTestTestfile.cmake  DictionaryApp  Makefile  cmake_install.cmake  coverage.txt  coverage_report.txt  default.profdata  default.profraw  runTests  runTests[1]_include.cmake  runTests[1]_tests.cmake
builder/Testing/Temporary/: CTestCostData.txt
docs/html/: annotated.html  classes.html  dictionary__record_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menu_8h_source.html  structDictionaryRecord-members.html  structDictionaryRecord.html  xml__converter_8h_source.html
docs/html/search/: all_3.js  all_4.js  classes_0.js  searchdata.js  variables_0.js  variables_1.js
include/: dictionary_record.h  menu.h  xml_converter.h
src/: .menu.cpp.swp  dictionary_record.cpp  main.cpp  menu.cpp  xml_converter.cpp
tests/: test_dictionary_record.cpp  test_main.cpp  test_xml_converter.cpp
